<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cr.ac.itcr.exm_sugef.activity.EditInfoTransaction"
    tools:showIn="@layout/activity_edit_info_transaction">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtEditType"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/typeEdit"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtEditDate"
        android:layout_below="@+id/txtEditType"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:layout_alignParentEnd="true"
        android:hint="@string/dateEdit"
        android:inputType="date"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/txtEditRode"
        android:layout_below="@+id/txtEditDate"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp"
        android:layout_alignParentEnd="true"
        android:hint="@string/RodeEdit" />

</RelativeLayout>
