<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cr.ac.itcr.exm_sugef.activity.AddTransaction">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="72dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:layout_marginBottom="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/add_transaction"
                    android:id="@+id/textView2"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left|top"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/transaction"
                    android:id="@+id/textView8"
                    android:textSize="18sp" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spAddTransaction"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/rode"
                    android:id="@+id/textView9"
                    android:layout_weight="0.74"
                    android:textSize="18sp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtAddRode"
                    android:textIsSelectable="false"
                    android:inputType="numberDecimal"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp">
                <Button
                    android:layout_width="200dp"
                    android:layout_height="61dp"
                    android:text="@string/add"
                    android:id="@+id/btnAddTransaction"
                    android:layout_gravity="center"
                    android:theme="@style/AlertDialog.AppCompat"
                    android:background="@color/btn_Form"
                    android:textSize="18sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
